--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -29,6 +29,7 @@
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                     {% if user.is_authenticated %}
+                        <li><p class="navbar-text">Wecome back <em>{{ user }}</em></p></li>
                         <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% if user.is_admin %}
                         <li><p class="navbar-text">|</p></li>
