fix phone display

--- a/volunteer/apps/accounts/templates/accounts/dashboard.html
+++ b/volunteer/apps/accounts/templates/accounts/dashboard.html
@@ -14,7 +14,7 @@
                 <dt>Email</dt>
                 <dd>{{ user.email }}</dd>
                 <dt>Phone Number</dt>
-                <dd>{{ user.profile.phone_number }}</dd>
+                <dd>{{ user.profile.phone }}</dd>
                 <dt>Has Ticket?</dt>
                 <dd>{{ user.profile.has_ticket|yesno:"Yes,No" }}</dd>
             </dl>
