--- a/volunteer/apps/departments/templates/admin/departments/role_detail.html
+++ b/volunteer/apps/departments/templates/admin/departments/role_detail.html
@@ -15,7 +15,8 @@
     <h1>
         Role #{{ role.pk }}: {{ role.name }}</h1>
         <p class="pull-right">
-        <small><a href="{% url 'admin:role-merge' department_pk=role.department_id pk=role.pk %}" class="btn btn-warning">Merge with another role</small></a>
+            <small><a href="{% url 'admin:role-shift-report' department_pk=role.department_id pk=role.pk %}" class="btn btn-primary">View Shift Report</small></a>
+            <small><a href="{% url 'admin:role-merge' department_pk=role.department_id pk=role.pk %}" class="btn btn-warning">Merge with another role</small></a>
         </p>
     </h1>
     <section>
