--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -17,14 +17,14 @@
         <div class="col-md-4">
             <h3>Roles</h3>
             <ul>
-                {% for role in department.roles.filter_to_current_event %}
+                {% for role in roles %}
                     <li><a href="#role-{{ role.pk }}">{{ role }}</a></li>
                 {% endfor %}
             </ul>
         </div>
     </div>
     </section>
-    {% for role in department.roles.filter_to_current_event %}
+    {% for role in roles %}
         <div class="role" id="role-{{ role.pk }}">
             <h4>
                 Role: {{ role }}
@@ -48,9 +48,9 @@
 <script>
 $(document).ready(function() {
     var applications = {};
-    {% for role in department.roles.filter_to_current_event %}applications.role_{{ role.pk }} = new app.ShiftGridApplication({
+    {% for role, role_shifts in roles_with_shifts %}applications.role_{{ role.pk }} = new app.ShiftGridApplication({
         el: $('#role-{{ role.id }}-shift-grid-container'),
-        rows: {{ role.shifts.filter_to_current_event|as_grid|json }}
+        rows: {{ role_shifts|as_grid|json }}
     });
     applications.role_{{ role.pk }}.start();
     {% endfor %}
