--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static pipeline user_utils argonauts %}
+{% load static pipeline argonauts %}
 <html>
     <head>
         <meta charset="UTF-8">
@@ -69,7 +69,7 @@
         {% javascript 'shift-grid' %}
 <script type="text/javascript">
 $(document).ready(function() {
-    window.django_user = new Backbone.Model({{ user|serialized_user|json }});
+    window.django_user = new Backbone.Model({{ USER_DATA|json }});
     window.headerActiveEventSelect = new HeaderActiveEventSelector($('#header-event-selector'));
 })
 </script>
