--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -24,11 +24,11 @@
         </div>
     </div>
     </section>
-    {% for role in roles %}
+    {% for role, role_stats in role_data %}
         <div class="role" id="role-{{ role.pk }}">
             <h4>
                 Role: {{ role }}
-                <span class="badge">{{ role.total_filled_shift_slots }} / {{ role.total_shift_slots }} shifts filled</span>
+                <span class="badge">{{ role_stats.total_filled_shift_slots }} / {{ role_stats.total_shift_slots }} shifts filled</span>
                 <a href="#role-{{ role.pk }}" class="text-muted quicklink">
                     <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                 </a>
