--- a/volunteer/apps/shifts/templates/admin/shifts/shift_detail.html
+++ b/volunteer/apps/shifts/templates/admin/shifts/shift_detail.html
@@ -10,12 +10,12 @@
 {% endblock %}
 
 {% block crumbs %}
-    <li>Shift #{{ shift.pk }}: {{ shift.start_time }}</li>
+    <li>Shift #{{ shift.pk }}: {{ shift.start_time|date:"D F j, Y, P" }}</li>
 {% endblock %}
 
 {% block content %}
     <h1>
-        Shift #{{ shift.pk }}: {{ shift.start_time }}
+        Shift #{{ shift.pk }}: {{ shift.start_time|date:"D F j, Y, P" }}
         <p class="pull-right">
         <small><a href="{% url 'admin:shift-delete' department_pk=shift.role.department_id role_pk=shift.role_id pk=shift.pk %}" class="btn btn-danger">Delete</small></a>
         </p>
